--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-codigo html
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Segunda PÁGINA</title>
+    </head>
+    <body>
+
+    </body>
+</html>
